--- a/Dependencies/CMakeLists.txt
+++ b/Dependencies/CMakeLists.txt
@@ -5,116 +5,147 @@ target_include_directories(base-n INTERFACE "base-n/include")
 
 # -------------------------------- bgfx.cmake --------------------------------
 # Dependencies: none
-set(BGFX_BUILD_TOOLS OFF CACHE BOOL "")
-set(BGFX_BUILD_EXAMPLES OFF CACHE BOOL "")
-set(BGFX_INSTALL OFF CACHE BOOL "")
-set(BGFX_CUSTOM_TARGETS OFF CACHE BOOL "")
-set(BGFX_USE_DEBUG_SUFFIX OFF CACHE BOOL "")
-set(BGFX_OPENGL_USE_EGL ON CACHE BOOL "")
-add_subdirectory(bgfx.cmake)
-target_compile_definitions(bgfx PRIVATE $<$<CONFIG:Debug>:BGFX_CONFIG_DEBUG=1>)
-target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_MULTITHREADED=1)
-target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_MAX_VERTEX_STREAMS=18)
-target_compile_definitions(bgfx PRIVATE BGFX_GL_CONFIG_BLIT_EMULATION=1)
-target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_DEBUG_ANNOTATION=0)
-if(GRAPHICS_API STREQUAL "D3D11")
-    target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_RENDERER_DIRECT3D11=1)
-elseif(GRAPHICS_API STREQUAL "D3D12")
-    target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_RENDERER_DIRECT3D12=1)
-elseif(GRAPHICS_API STREQUAL "Metal")
-    target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_RENDERER_METAL=1)
-elseif(GRAPHICS_API STREQUAL "OpenGL")
-    target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_RENDERER_OPENGLES=30)
-    target_compile_definitions(bgfx PRIVATE BGFX_GL_CONFIG_TEXTURE_READ_BACK_EMULATION=1)
-elseif(GRAPHICS_API STREQUAL "Vulkan")
-    target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_RENDERER_VULKAN=1)
-endif()
-set_property(TARGET astc-encoder PROPERTY FOLDER Dependencies/bgfx/3rdparty)
-set_property(TARGET astc-encoder PROPERTY UNITY_BUILD false)
-set_property(TARGET edtaa3 PROPERTY FOLDER Dependencies/bgfx/3rdparty)
-set_property(TARGET etc1 PROPERTY FOLDER Dependencies/bgfx/3rdparty)
-set_property(TARGET etc2 PROPERTY FOLDER Dependencies/bgfx/3rdparty)
-set_property(TARGET iqa PROPERTY FOLDER Dependencies/bgfx/3rdparty)
-set_property(TARGET nvtt PROPERTY FOLDER Dependencies/bgfx/3rdparty)
-set_property(TARGET nvtt PROPERTY UNITY_BUILD false)
-set_property(TARGET pvrtc PROPERTY FOLDER Dependencies/bgfx/3rdparty)
-set_property(TARGET squish PROPERTY FOLDER Dependencies/bgfx/3rdparty)
-set_property(TARGET squish PROPERTY UNITY_BUILD false)
-if(TARGET tinyexr)
-    set_property(TARGET tinyexr PROPERTY FOLDER Dependencies/bgfx/3rdparty)
-endif()
-set_property(TARGET bgfx PROPERTY FOLDER Dependencies/bgfx)
-set_property(TARGET bimg PROPERTY FOLDER Dependencies/bgfx)
-set_property(TARGET bx PROPERTY FOLDER Dependencies/bgfx)
-disable_warnings(astc-encoder)
-disable_warnings(edtaa3)
-disable_warnings(etc1)
-disable_warnings(etc2)
-disable_warnings(iqa)
-disable_warnings(nvtt)
-disable_warnings(pvrtc)
-disable_warnings(squish)
-disable_warnings(bgfx)
-disable_warnings(bimg)
-disable_warnings(bx)
+if(NOT TARGET bgfx)
+    set(BGFX_BUILD_TOOLS OFF CACHE BOOL "")
+    set(BGFX_BUILD_EXAMPLES OFF CACHE BOOL "")
+    set(BGFX_INSTALL OFF CACHE BOOL "")
+    set(BGFX_CUSTOM_TARGETS OFF CACHE BOOL "")
+    set(BGFX_USE_DEBUG_SUFFIX OFF CACHE BOOL "")
+    set(BGFX_OPENGL_USE_EGL ON CACHE BOOL "")
+    add_subdirectory(bgfx.cmake)
+    target_compile_definitions(bgfx PRIVATE $<$<CONFIG:Debug>:BGFX_CONFIG_DEBUG=1>)
+    target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_MULTITHREADED=1)
+    target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_MAX_VERTEX_STREAMS=18)
+    target_compile_definitions(bgfx PRIVATE BGFX_GL_CONFIG_BLIT_EMULATION=1)
+    target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_DEBUG_ANNOTATION=0)
+    if(GRAPHICS_API STREQUAL "D3D11")
+        target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_RENDERER_DIRECT3D11=1)
+    elseif(GRAPHICS_API STREQUAL "D3D12")
+        target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_RENDERER_DIRECT3D12=1)
+    elseif(GRAPHICS_API STREQUAL "Metal")
+        target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_RENDERER_METAL=1)
+    elseif(GRAPHICS_API STREQUAL "OpenGL")
+        target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_RENDERER_OPENGLES=30)
+        target_compile_definitions(bgfx PRIVATE BGFX_GL_CONFIG_TEXTURE_READ_BACK_EMULATION=1)
+    elseif(GRAPHICS_API STREQUAL "Vulkan")
+        target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_RENDERER_VULKAN=1)
+    endif()
+    set_property(TARGET astc-encoder PROPERTY FOLDER Dependencies/bgfx/3rdparty)
+    set_property(TARGET astc-encoder PROPERTY UNITY_BUILD false)
+    set_property(TARGET edtaa3 PROPERTY FOLDER Dependencies/bgfx/3rdparty)
+    set_property(TARGET etc1 PROPERTY FOLDER Dependencies/bgfx/3rdparty)
+    set_property(TARGET etc2 PROPERTY FOLDER Dependencies/bgfx/3rdparty)
+    set_property(TARGET iqa PROPERTY FOLDER Dependencies/bgfx/3rdparty)
+    set_property(TARGET nvtt PROPERTY FOLDER Dependencies/bgfx/3rdparty)
+    set_property(TARGET nvtt PROPERTY UNITY_BUILD false)
+    set_property(TARGET pvrtc PROPERTY FOLDER Dependencies/bgfx/3rdparty)
+    set_property(TARGET squish PROPERTY FOLDER Dependencies/bgfx/3rdparty)
+    set_property(TARGET squish PROPERTY UNITY_BUILD false)
+    if(TARGET tinyexr)
+        set_property(TARGET tinyexr PROPERTY FOLDER Dependencies/bgfx/3rdparty)
+    endif()
+    set_property(TARGET bgfx PROPERTY FOLDER Dependencies/bgfx)
+    set_property(TARGET bimg PROPERTY FOLDER Dependencies/bgfx)
+    set_property(TARGET bx PROPERTY FOLDER Dependencies/bgfx)
+    disable_warnings(astc-encoder)
+    disable_warnings(edtaa3)
+    disable_warnings(etc1)
+    disable_warnings(etc2)
+    disable_warnings(iqa)
+    disable_warnings(nvtt)
+    disable_warnings(pvrtc)
+    disable_warnings(squish)
+    disable_warnings(bgfx)
+    disable_warnings(bimg)
+    disable_warnings(bx)
 
-if(APPLE)
-    set_property(TARGET bgfx PROPERTY UNITY_BUILD false)
+    if(APPLE)
+        set_property(TARGET bgfx PROPERTY UNITY_BUILD false)
+    endif()
+else()
+    set(BGFX_DIR "${CMAKE_CURRENT_SOURCE_DIR}/bgfx.cmake/bgfx" CACHE STRING "Location of bgfx." )
+    set(BIMG_DIR "${CMAKE_CURRENT_SOURCE_DIR}/bgfx.cmake/bimg" CACHE STRING "Location of bimg." )
+    set(BX_DIR "${CMAKE_CURRENT_SOURCE_DIR}/bgfx.cmake/bx" CACHE STRING "Location of bx." )
+    target_include_directories(bgfx INTERFACE "${BGFX_DIR}/include")
+    target_include_directories(bx INTERFACE "${BX_DIR}/include" "${BX_DIR}/include/compat/msvc")
+    target_include_directories(bimg INTERFACE "${BIMG_DIR}/include" )
+
+    if (BGFX_CONFIG_DEBUG)
+        target_compile_definitions( bgfx INTERFACE "BX_CONFIG_DEBUG=1" )
+    else()
+        target_compile_definitions( bgfx INTERFACE "BX_CONFIG_DEBUG=0" )
+    endif()
 endif()
 
 # -------------------------------- glslang --------------------------------
 # Dependencies: none
-set(BUILD_EXTERNAL OFF CACHE BOOL "")
-set(ENABLE_SPVREMAPPER OFF CACHE BOOL "")
-set(ENABLE_GLSLANG_BINARIES OFF CACHE BOOL "")
-set(ENABLE_HLSL OFF CACHE BOOL "")
-set(ENABLE_OPT OFF CACHE BOOL "")
-set(ENABLE_CTEST OFF CACHE BOOL "")
-set(SKIP_GLSLANG_INSTALL ON CACHE BOOL "")
-set(ENABLE_GLSLANG_WEBMIN ON CACHE BOOL "")
-set(ENABLE_GLSLANG_WEBMIN_DEVEL OFF CACHE BOOL "")
-add_subdirectory(glslang)
-set_property(TARGET GenericCodeGen PROPERTY FOLDER Dependencies/glslang)
-set_property(TARGET glslang PROPERTY FOLDER Dependencies/glslang)
-set_property(TARGET OGLCompiler PROPERTY FOLDER Dependencies/glslang)
-set_property(TARGET OSDependent PROPERTY FOLDER Dependencies/glslang)
-set_property(TARGET MachineIndependent PROPERTY FOLDER Dependencies/glslang)
-set_property(TARGET SPIRV PROPERTY FOLDER Dependencies/glslang)
-set_property(TARGET glslang-default-resource-limits PROPERTY FOLDER Dependencies/glslang)
-disable_warnings(GenericCodeGen)
-disable_warnings(glslang)
-disable_warnings(OGLCompiler)
-disable_warnings(OSDependent)
-disable_warnings(MachineIndependent)
-disable_warnings(SPIRV)
-disable_warnings(glslang-default-resource-limits)
+if(NOT TARGET glslang)
+    set(BUILD_EXTERNAL OFF CACHE BOOL "")
+    set(ENABLE_SPVREMAPPER OFF CACHE BOOL "")
+    set(ENABLE_GLSLANG_BINARIES OFF CACHE BOOL "")
+    set(ENABLE_HLSL OFF CACHE BOOL "")
+    set(ENABLE_OPT OFF CACHE BOOL "")
+    set(ENABLE_CTEST OFF CACHE BOOL "")
+    set(SKIP_GLSLANG_INSTALL ON CACHE BOOL "")
+    set(ENABLE_GLSLANG_WEBMIN ON CACHE BOOL "")
+    set(ENABLE_GLSLANG_WEBMIN_DEVEL OFF CACHE BOOL "")
+    add_subdirectory(glslang)
+    set_property(TARGET GenericCodeGen PROPERTY FOLDER Dependencies/glslang)
+    set_property(TARGET glslang PROPERTY FOLDER Dependencies/glslang)
+    set_property(TARGET OGLCompiler PROPERTY FOLDER Dependencies/glslang)
+    set_property(TARGET OSDependent PROPERTY FOLDER Dependencies/glslang)
+    set_property(TARGET MachineIndependent PROPERTY FOLDER Dependencies/glslang)
+    set_property(TARGET SPIRV PROPERTY FOLDER Dependencies/glslang)
+    set_property(TARGET glslang-default-resource-limits PROPERTY FOLDER Dependencies/glslang)
+    disable_warnings(GenericCodeGen)
+    disable_warnings(glslang)
+    disable_warnings(OGLCompiler)
+    disable_warnings(OSDependent)
+    disable_warnings(MachineIndependent)
+    disable_warnings(SPIRV)
+    disable_warnings(glslang-default-resource-limits)
+else()
+    set(GLSLANG_DIR "${CMAKE_CURRENT_SOURCE_DIR}/glslang" CACHE STRING "Location of glslang." )
+    target_include_directories(glslang INTERFACE "${GLSLANG_DIR}/glslang/Include" "${GLSLANG_DIR}")
+endif()
 
 # -------------------------------- SPIRV-Cross --------------------------------
 # Dependencies: none
-set(SPIRV_CROSS_CLI OFF CACHE BOOL "")
-set(SPIRV_CROSS_ENABLE_TESTS OFF CACHE BOOL "")
-set(SPIRV_CROSS_ENABLE_CPP OFF CACHE BOOL "")
-set(SPIRV_CROSS_ENABLE_REFLECT OFF CACHE BOOL "")
-set(SPIRV_CROSS_ENABLE_C_API OFF CACHE BOOL "")
-set(SPIRV_CROSS_ENABLE_UTIL OFF CACHE BOOL "")
-set(SPIRV_CROSS_SKIP_INSTALL ON CACHE BOOL "")
-if(NOT GRAPHICS_API STREQUAL "Metal")
-    set(SPIRV_CROSS_ENABLE_MSL OFF CACHE BOOL "")
-endif()
-if(NOT GRAPHICS_API STREQUAL "D3D11" AND NOT GRAPHICS_API STREQUAL "D3D12")
-    set(SPIRV_CROSS_ENABLE_HLSL OFF CACHE BOOL "")
-endif()
-add_subdirectory(SPIRV-Cross)
-set_property(TARGET spirv-cross-core PROPERTY FOLDER Dependencies/SPIRV-Cross)
-set_property(TARGET spirv-cross-glsl PROPERTY FOLDER Dependencies/SPIRV-Cross)
-disable_warnings(spirv-cross-core)
-disable_warnings(spirv-cross-glsl)
-if(TARGET spirv-cross-msl)
-    set_property(TARGET spirv-cross-msl PROPERTY FOLDER Dependencies/SPIRV-Cross)
-endif()
-if(TARGET spirv-cross-hlsl)
-    set_property(TARGET spirv-cross-hlsl PROPERTY FOLDER Dependencies/SPIRV-Cross)
-    disable_warnings(spirv-cross-hlsl)
+if(NOT TARGET spirv-cross-core)
+    set(SPIRV_CROSS_CLI OFF CACHE BOOL "")
+    set(SPIRV_CROSS_ENABLE_TESTS OFF CACHE BOOL "")
+    set(SPIRV_CROSS_ENABLE_CPP OFF CACHE BOOL "")
+    set(SPIRV_CROSS_ENABLE_REFLECT OFF CACHE BOOL "")
+    set(SPIRV_CROSS_ENABLE_C_API OFF CACHE BOOL "")
+    set(SPIRV_CROSS_ENABLE_UTIL OFF CACHE BOOL "")
+    set(SPIRV_CROSS_SKIP_INSTALL ON CACHE BOOL "")
+    if(NOT GRAPHICS_API STREQUAL "Metal")
+        set(SPIRV_CROSS_ENABLE_MSL OFF CACHE BOOL "")
+    endif()
+    if(NOT GRAPHICS_API STREQUAL "D3D11" AND NOT GRAPHICS_API STREQUAL "D3D12")
+        set(SPIRV_CROSS_ENABLE_HLSL OFF CACHE BOOL "")
+    endif()
+    add_subdirectory(SPIRV-Cross)
+    set_property(TARGET spirv-cross-core PROPERTY FOLDER Dependencies/SPIRV-Cross)
+    set_property(TARGET spirv-cross-glsl PROPERTY FOLDER Dependencies/SPIRV-Cross)
+    disable_warnings(spirv-cross-core)
+    disable_warnings(spirv-cross-glsl)
+    if(TARGET spirv-cross-msl)
+        set_property(TARGET spirv-cross-msl PROPERTY FOLDER Dependencies/SPIRV-Cross)
+    endif()
+    if(TARGET spirv-cross-hlsl)
+        set_property(TARGET spirv-cross-hlsl PROPERTY FOLDER Dependencies/SPIRV-Cross)
+        disable_warnings(spirv-cross-hlsl)
+    endif()
+else()
+    set(SPIRV_DIR "${CMAKE_CURRENT_SOURCE_DIR}/SPIRV-Cross" CACHE STRING "Location of spirv." )
+    target_include_directories(spirv-cross-core INTERFACE "${SPIRV_DIR}/include" "${SPIRV_DIR}")
+    target_link_libraries(spirv-cross-glsl INTERFACE spirv-cross-core)
+
+    if(GRAPHICS_API STREQUAL "D3D11" OR GRAPHICS_API STREQUAL "D3D12")
+        import_prebuilt_target(spirv-cross-hlsl)
+        target_link_libraries(spirv-cross-hlsl INTERFACE spirv-cross-core spirv-cross-glsl)
+    endif()
 endif()
 
 # -------------------------------- xr --------------------------------
@@ -124,13 +155,6 @@ if(BABYLON_NATIVE_PLUGIN_NATIVEXR AND (WIN32 OR ANDROID OR IOS))
     add_subdirectory(xr)
     set_property(TARGET xr PROPERTY FOLDER Dependencies/xr)
     warnings_as_errors(xr)
-    if(WIN32 OR WINDOWS_STORE)
-        set_property(TARGET openxr_loader PROPERTY FOLDER Dependencies/xr/OpenXR)
-        set_property(TARGET generate_openxr_header PROPERTY FOLDER Dependencies/xr/OpenXR/Generated)
-        set_property(TARGET xr_global_generated_files PROPERTY FOLDER Dependencies/xr/OpenXR/Generated)
-        set_property(TARGET uninstall PROPERTY FOLDER Dependencies/xr/OpenXR/Generated)
-        disable_warnings(openxr_loader)
-    endif()
 endif()
 
 # --------------------------- WindowsAppSDK ---------------------------
