--- a/Dependencies/xr/CMakeLists.txt
+++ b/Dependencies/xr/CMakeLists.txt
@@ -16,7 +16,19 @@ elseif (IOS)
 else()
     # Avoid picking up system installed jsoncpp in favor of source distributed with openxr_loader project
     set(BUILD_WITH_SYSTEM_JSONCPP OFF CACHE BOOL "disable using system installed jsoncpp")
-    add_subdirectory(Dependencies/OpenXR-SDK)
+    if(NOT TARGET openxr_loader)
+        add_subdirectory(Dependencies/OpenXR-SDK)
+        if(WIN32 OR WINDOWS_STORE)
+            set_property(TARGET openxr_loader PROPERTY FOLDER Dependencies/xr/OpenXR)
+            set_property(TARGET generate_openxr_header PROPERTY FOLDER Dependencies/xr/OpenXR/Generated)
+            set_property(TARGET xr_global_generated_files PROPERTY FOLDER Dependencies/xr/OpenXR/Generated)
+            set_property(TARGET uninstall PROPERTY FOLDER Dependencies/xr/OpenXR/Generated)
+            disable_warnings(openxr_loader)
+        endif()
+    #else()
+    #    set(OPENXR_LOADER_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/OpenXR-SDK" CACHE STRING "Location of open xr loader." )
+    #    target_include_directories(openxr_loader INTERFACE "${OPENXR_LOADER_DIR}/Include")
+    endif()
 
     set(SOURCES ${SOURCES}
         "Source/OpenXR/XR.cpp")
