--- a/Dependencies/CMakeLists.txt
+++ b/Dependencies/CMakeLists.txt
@@ -46,17 +46,8 @@ endif()
 set_property(TARGET bgfx PROPERTY FOLDER Dependencies/bgfx)
 set_property(TARGET bimg PROPERTY FOLDER Dependencies/bgfx)
 set_property(TARGET bx PROPERTY FOLDER Dependencies/bgfx)
-disable_warnings(astc-encoder)
-disable_warnings(edtaa3)
-disable_warnings(etc1)
-disable_warnings(etc2)
-disable_warnings(iqa)
-disable_warnings(nvtt)
-disable_warnings(pvrtc)
-disable_warnings(squish)
-disable_warnings(bgfx)
-disable_warnings(bimg)
-disable_warnings(bx)
+
+target_compile_definitions(bx PRIVATE _CRT_SECURE_NO_WARNINGS)
 
 if(APPLE)
     set_property(TARGET bgfx PROPERTY UNITY_BUILD false)
@@ -76,18 +67,11 @@ set(ENABLE_GLSLANG_WEBMIN_DEVEL OFF CACHE BOOL "")
 FetchContent_MakeAvailable(glslang)
 set_property(TARGET GenericCodeGen PROPERTY FOLDER Dependencies/glslang)
 set_property(TARGET glslang PROPERTY FOLDER Dependencies/glslang)
+set_property(TARGET glslang-default-resource-limits PROPERTY FOLDER Dependencies/glslang)
 set_property(TARGET OGLCompiler PROPERTY FOLDER Dependencies/glslang)
 set_property(TARGET OSDependent PROPERTY FOLDER Dependencies/glslang)
 set_property(TARGET MachineIndependent PROPERTY FOLDER Dependencies/glslang)
 set_property(TARGET SPIRV PROPERTY FOLDER Dependencies/glslang)
-set_property(TARGET glslang-default-resource-limits PROPERTY FOLDER Dependencies/glslang)
-disable_warnings(GenericCodeGen)
-disable_warnings(glslang)
-disable_warnings(OGLCompiler)
-disable_warnings(OSDependent)
-disable_warnings(MachineIndependent)
-disable_warnings(SPIRV)
-disable_warnings(glslang-default-resource-limits)
 
 # -------------------------------- SPIRV-Cross --------------------------------
 # Dependencies: none
@@ -107,14 +91,11 @@ endif()
 FetchContent_MakeAvailable(SPIRV-Cross)
 set_property(TARGET spirv-cross-core PROPERTY FOLDER Dependencies/SPIRV-Cross)
 set_property(TARGET spirv-cross-glsl PROPERTY FOLDER Dependencies/SPIRV-Cross)
-disable_warnings(spirv-cross-core)
-disable_warnings(spirv-cross-glsl)
 if(TARGET spirv-cross-msl)
     set_property(TARGET spirv-cross-msl PROPERTY FOLDER Dependencies/SPIRV-Cross)
 endif()
 if(TARGET spirv-cross-hlsl)
     set_property(TARGET spirv-cross-hlsl PROPERTY FOLDER Dependencies/SPIRV-Cross)
-    disable_warnings(spirv-cross-hlsl)
 endif()
 
 # HACK: Re-enabled disabled warnings in SPIRV-Cross as they cause alerts in BinSkim
@@ -138,7 +119,6 @@ if(BABYLON_NATIVE_PLUGIN_NATIVEXR AND (WIN32 OR ANDROID OR IOS))
         set_property(TARGET generate_openxr_header PROPERTY FOLDER Dependencies/xr/OpenXR/Generated)
         set_property(TARGET xr_global_generated_files PROPERTY FOLDER Dependencies/xr/OpenXR/Generated)
         set_property(TARGET uninstall PROPERTY FOLDER Dependencies/xr/OpenXR/Generated)
-        disable_warnings(openxr_loader)
     endif()
 endif()
 
