--- a/Dependencies/CMakeLists.txt
+++ b/Dependencies/CMakeLists.txt
@@ -63,12 +63,10 @@ if(NOT TARGET bgfx)
         set_property(TARGET bgfx PROPERTY UNITY_BUILD false)
     endif()
 else()
-    set(BGFX_DIR "${CMAKE_CURRENT_SOURCE_DIR}/bgfx.cmake/bgfx" CACHE STRING "Location of bgfx." )
-    set(BIMG_DIR "${CMAKE_CURRENT_SOURCE_DIR}/bgfx.cmake/bimg" CACHE STRING "Location of bimg." )
-    set(BX_DIR "${CMAKE_CURRENT_SOURCE_DIR}/bgfx.cmake/bx" CACHE STRING "Location of bx." )
-    target_include_directories(bgfx INTERFACE "${BGFX_DIR}/include")
-    target_include_directories(bx INTERFACE "${BX_DIR}/include" "${BX_DIR}/include/compat/msvc")
-    target_include_directories(bimg INTERFACE "${BIMG_DIR}/include" )
+    set(BGFX_DIR "${CMAKE_CURRENT_SOURCE_DIR}/bgfx.cmake")
+    target_include_directories(bgfx INTERFACE "${BGFX_DIR}/bgfx/include")
+    target_include_directories(bx INTERFACE "${BGFX_DIR}/bx/include" "${BGFX_DIR}/bx/include/compat/msvc")
+    target_include_directories(bimg INTERFACE "${BGFX_DIR}/bimg/include" )
 
     if (BGFX_CONFIG_DEBUG)
         target_compile_definitions( bgfx INTERFACE "BX_CONFIG_DEBUG=1" )
