undo changes in dependencies

--- a/Dependencies/CMakeLists.txt
+++ b/Dependencies/CMakeLists.txt
@@ -98,6 +98,12 @@ set(SPIRV_CROSS_ENABLE_REFLECT OFF CACHE BOOL "")
 set(SPIRV_CROSS_ENABLE_C_API OFF CACHE BOOL "")
 set(SPIRV_CROSS_ENABLE_UTIL OFF CACHE BOOL "")
 set(SPIRV_CROSS_SKIP_INSTALL ON CACHE BOOL "")
+if(NOT GRAPHICS_API STREQUAL "Metal")
+    set(SPIRV_CROSS_ENABLE_MSL OFF CACHE BOOL "")
+endif()
+if(NOT GRAPHICS_API STREQUAL "D3D11" AND NOT GRAPHICS_API STREQUAL "D3D12")
+    set(SPIRV_CROSS_ENABLE_HLSL OFF CACHE BOOL "")
+endif()
 FetchContent_MakeAvailable(SPIRV-Cross)
 set_property(TARGET spirv-cross-core PROPERTY FOLDER Dependencies/SPIRV-Cross)
 set_property(TARGET spirv-cross-glsl PROPERTY FOLDER Dependencies/SPIRV-Cross)
