Use fetch content instead of submodules (#1312)
And fix UNITY_BUILD which makes the build a little faster.

--- a/Dependencies/CMakeLists.txt
+++ b/Dependencies/CMakeLists.txt
@@ -1,7 +1,7 @@
 # -------------------------------- base-n --------------------------------
 # Dependencies: none
 add_library(base-n INTERFACE)
-target_include_directories(base-n INTERFACE "base-n/include")
+target_include_directories(base-n INTERFACE "${base-n_SOURCE_DIR}/include")
 
 # -------------------------------- bgfx.cmake --------------------------------
 # Dependencies: none
@@ -11,7 +11,7 @@ set(BGFX_INSTALL OFF CACHE BOOL "")
 set(BGFX_CUSTOM_TARGETS OFF CACHE BOOL "")
 set(BGFX_USE_DEBUG_SUFFIX OFF CACHE BOOL "")
 set(BGFX_OPENGL_USE_EGL ON CACHE BOOL "")
-add_subdirectory(bgfx.cmake)
+FetchContent_MakeAvailable(bgfx)
 target_compile_definitions(bgfx PRIVATE $<$<CONFIG:Debug>:BGFX_CONFIG_DEBUG=1>)
 target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_MULTITHREADED=1)
 target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_MAX_VERTEX_STREAMS=18)
@@ -73,7 +73,7 @@ set(ENABLE_CTEST OFF CACHE BOOL "")
 set(SKIP_GLSLANG_INSTALL ON CACHE BOOL "")
 set(ENABLE_GLSLANG_WEBMIN ON CACHE BOOL "")
 set(ENABLE_GLSLANG_WEBMIN_DEVEL OFF CACHE BOOL "")
-add_subdirectory(glslang)
+FetchContent_MakeAvailable(glslang)
 set_property(TARGET GenericCodeGen PROPERTY FOLDER Dependencies/glslang)
 set_property(TARGET glslang PROPERTY FOLDER Dependencies/glslang)
 set_property(TARGET OGLCompiler PROPERTY FOLDER Dependencies/glslang)
@@ -104,7 +104,7 @@ endif()
 if(NOT GRAPHICS_API STREQUAL "D3D11" AND NOT GRAPHICS_API STREQUAL "D3D12")
     set(SPIRV_CROSS_ENABLE_HLSL OFF CACHE BOOL "")
 endif()
-add_subdirectory(SPIRV-Cross)
+FetchContent_MakeAvailable(SPIRV-Cross)
 set_property(TARGET spirv-cross-core PROPERTY FOLDER Dependencies/SPIRV-Cross)
 set_property(TARGET spirv-cross-glsl PROPERTY FOLDER Dependencies/SPIRV-Cross)
 disable_warnings(spirv-cross-core)
