--- a/.github/jobs/android.yml
+++ b/.github/jobs/android.yml
@@ -11,10 +11,6 @@ jobs:
       vmImage: ${{ parameters.vmImage }}
       
     steps:
-    - script: |
-        git submodule update --init --recursive
-      displayName: 'Checkout dependencies'
-
     - template: cmake.yml
       parameters:
         vmImage: ${{ parameters.vmImage }}
@@ -24,7 +20,7 @@ jobs:
           workingDirectory: 'Apps/Playground/Android'
           gradleWrapperFile: 'Apps/Playground/Android/gradlew'
           gradleOptions: '-Xmx1536m'
-          options: '-PJSEngine=${{ parameters.JSEngine }} -PARM64Only -PNDK_VERSION=$(NDK_VERSION) -PUNITY_BUILD=${UNITY_BUILD}'
+          options: '-PJSEngine=${{ parameters.JSEngine }} -PARM64Only -PNDK_VERSION=$(NDK_VERSION)'
           publishJUnitResults: false
           tasks: 'assembleRelease'
       displayName: 'Build Playground ${{ parameters.JSEngine }}'
