--- a/.github/jobs/macos.yml
+++ b/.github/jobs/macos.yml
@@ -11,10 +11,6 @@ jobs:
       vmImage: ${{ parameters.vmImage }}
   
     steps:
-    - script: |
-        git submodule update --init --recursive
-      displayName: 'Checkout dependencies'
-
     - template: cmake.yml
       parameters:
         vmImage: ${{ parameters.vmImage }}
@@ -26,7 +22,7 @@ jobs:
     - script: |
         mkdir buildmacOS
         cd buildmacOS
-        cmake .. -G Xcode -D CMAKE_UNITY_BUILD=${UNITY_BUILD}
+        cmake .. -G Xcode -D CMAKE_UNITY_BUILD=$(UNITY_BUILD)
       displayName: 'Generate macOS solution'
 
     - task: Xcode@5
