--- a/.github/jobs/uwp.yml
+++ b/.github/jobs/uwp.yml
@@ -28,13 +28,9 @@ jobs:
 
     steps:
     - script: |
-        git submodule update --init --recursive
-      displayName: 'Checkout dependencies'
-
-    - script: |
         mkdir build${{ variables.solutionName }}
         cd build${{ variables.solutionName }}
-        cmake .. -D CMAKE_SYSTEM_NAME=WindowsStore -D CMAKE_SYSTEM_VERSION=10.0 ${{ variables.jsEngineDefine }} -A ${{ parameters.platform }} -D CMAKE_UNITY_BUILD=${UNITY_BUILD}
+        cmake .. -D CMAKE_SYSTEM_NAME=WindowsStore -D CMAKE_SYSTEM_VERSION=10.0 ${{ variables.jsEngineDefine }} -A ${{ parameters.platform }} -D CMAKE_UNITY_BUILD=$(UNITY_BUILD)
       displayName: 'Generate ${{ variables.solutionName }} solution'
   
     - task: VSBuild@1
