--- a/.github/jobs/win32.yml
+++ b/.github/jobs/win32.yml
@@ -18,7 +18,7 @@ parameters:
   
 jobs:
   - job: ${{ parameters.name }}
-    timeoutInMinutes: 30
+    timeoutInMinutes: 15
     pool:
       vmImage: ${{ parameters.vmImage }}
     variables:
@@ -35,14 +35,10 @@ jobs:
 
     steps:
       - script: |
-          git submodule update --init --recursive
-        displayName: 'Checkout dependencies'
-
-      - script: |
           mkdir build${{ variables.solutionName }}
           cd build${{ variables.solutionName }}
           # BGFX_CONFIG_MAX_FRAME_BUFFERS is set so enough Framebuffers are available before V8 starts disposing unused ones
-          cmake -A ${{ parameters.platform }} ${{ variables.jsEngineDefine }} -D BGFX_CONFIG_DEBUG=ON -D GRAPHICS_API=${{ parameters.graphics_api }} -D CMAKE_UNITY_BUILD=${UNITY_BUILD} -D BGFX_CONFIG_MAX_FRAME_BUFFERS=256 ..
+          cmake -A ${{ parameters.platform }} ${{ variables.jsEngineDefine }} -D BGFX_CONFIG_DEBUG=ON -D GRAPHICS_API=${{ parameters.graphics_api }} -D CMAKE_UNITY_BUILD=$(UNITY_BUILD) -D BGFX_CONFIG_MAX_FRAME_BUFFERS=256 ..
         displayName: 'Generate ${{ variables.solutionName }} solution'
     
       - task: MSBuild@1
@@ -63,11 +59,11 @@ jobs:
           reg add "HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\Windows\Windows Error Reporting\LocalDumps\UnitTests.exe" /v DumpFolder /t REG_SZ /d "$(Build.ArtifactStagingDirectory)/Dumps"
 
         displayName: 'Enable Crash Dumps'
-    
+
       - script: |
           cd build${{ variables.solutionName }}\Apps\Playground
           cd RelWithDebInfo
-          Playground app:///Scripts/validation_native.js 
+          Playground app:///Scripts/validation_native.js
         displayName: 'Validation Tests'
 
       - script: |
