--- a/Dependencies/CMakeLists.txt
+++ b/Dependencies/CMakeLists.txt
@@ -53,17 +53,6 @@ if(NOT TARGET bgfx)
     if(APPLE)
         set_property(TARGET bgfx PROPERTY UNITY_BUILD false)
     endif()
-else()
-    set(BGFX_DIR "${CMAKE_CURRENT_SOURCE_DIR}/bgfx.cmake")
-    target_include_directories(bgfx INTERFACE "${BGFX_DIR}/bgfx/include")
-    target_include_directories(bx INTERFACE "${BGFX_DIR}/bx/include" "${BGFX_DIR}/bx/include/compat/msvc")
-    target_include_directories(bimg INTERFACE "${BGFX_DIR}/bimg/include" )
-
-    if (BGFX_CONFIG_DEBUG)
-        target_compile_definitions( bgfx INTERFACE "BX_CONFIG_DEBUG=1" )
-    else()
-        target_compile_definitions( bgfx INTERFACE "BX_CONFIG_DEBUG=0" )
-    endif()
 endif()
 
 # -------------------------------- glslang --------------------------------
@@ -90,37 +79,39 @@ endif()
 
 # -------------------------------- SPIRV-Cross --------------------------------
 # Dependencies: none
-set(SPIRV_CROSS_CLI OFF CACHE BOOL "")
-set(SPIRV_CROSS_ENABLE_TESTS OFF CACHE BOOL "")
-set(SPIRV_CROSS_ENABLE_CPP OFF CACHE BOOL "")
-set(SPIRV_CROSS_ENABLE_REFLECT OFF CACHE BOOL "")
-set(SPIRV_CROSS_ENABLE_C_API OFF CACHE BOOL "")
-set(SPIRV_CROSS_ENABLE_UTIL OFF CACHE BOOL "")
-set(SPIRV_CROSS_SKIP_INSTALL ON CACHE BOOL "")
-if(NOT GRAPHICS_API STREQUAL "Metal")
-    set(SPIRV_CROSS_ENABLE_MSL OFF CACHE BOOL "")
-endif()
-if(NOT GRAPHICS_API STREQUAL "D3D11" AND NOT GRAPHICS_API STREQUAL "D3D12")
-    set(SPIRV_CROSS_ENABLE_HLSL OFF CACHE BOOL "")
-endif()
-FetchContent_MakeAvailable(SPIRV-Cross)
-set_property(TARGET spirv-cross-core PROPERTY FOLDER Dependencies/SPIRV-Cross)
-set_property(TARGET spirv-cross-glsl PROPERTY FOLDER Dependencies/SPIRV-Cross)
-if(TARGET spirv-cross-msl)
-    set_property(TARGET spirv-cross-msl PROPERTY FOLDER Dependencies/SPIRV-Cross)
-endif()
-if(TARGET spirv-cross-hlsl)
-    set_property(TARGET spirv-cross-hlsl PROPERTY FOLDER Dependencies/SPIRV-Cross)
-endif()
-
-# HACK: Re-enabled disabled warnings in SPIRV-Cross as they cause alerts in BinSkim
-foreach(target spirv-cross-core spirv-cross-glsl spirv-cross-msl spirv-cross-hlsl)
-    if(TARGET ${target})
-        get_target_property(compileOptions ${target} COMPILE_OPTIONS)
-        list(REMOVE_ITEM compileOptions /wd4267 /wd4996)
-        set_target_properties(${target} PROPERTIES COMPILE_OPTIONS "${compileOptions}")
+if(NOT TARGET spirv-cross-core)
+    set(SPIRV_CROSS_CLI OFF CACHE BOOL "")
+    set(SPIRV_CROSS_ENABLE_TESTS OFF CACHE BOOL "")
+    set(SPIRV_CROSS_ENABLE_CPP OFF CACHE BOOL "")
+    set(SPIRV_CROSS_ENABLE_REFLECT OFF CACHE BOOL "")
+    set(SPIRV_CROSS_ENABLE_C_API OFF CACHE BOOL "")
+    set(SPIRV_CROSS_ENABLE_UTIL OFF CACHE BOOL "")
+    set(SPIRV_CROSS_SKIP_INSTALL ON CACHE BOOL "")
+    if(NOT GRAPHICS_API STREQUAL "Metal")
+        set(SPIRV_CROSS_ENABLE_MSL OFF CACHE BOOL "")
     endif()
-endforeach()
+    if(NOT GRAPHICS_API STREQUAL "D3D11" AND NOT GRAPHICS_API STREQUAL "D3D12")
+        set(SPIRV_CROSS_ENABLE_HLSL OFF CACHE BOOL "")
+    endif()
+    FetchContent_MakeAvailable(SPIRV-Cross)
+    set_property(TARGET spirv-cross-core PROPERTY FOLDER Dependencies/SPIRV-Cross)
+    set_property(TARGET spirv-cross-glsl PROPERTY FOLDER Dependencies/SPIRV-Cross)
+    if(TARGET spirv-cross-msl)
+        set_property(TARGET spirv-cross-msl PROPERTY FOLDER Dependencies/SPIRV-Cross)
+    endif()
+    if(TARGET spirv-cross-hlsl)
+        set_property(TARGET spirv-cross-hlsl PROPERTY FOLDER Dependencies/SPIRV-Cross)
+    endif()
+
+    # HACK: Re-enabled disabled warnings in SPIRV-Cross as they cause alerts in BinSkim
+    foreach(target spirv-cross-core spirv-cross-glsl spirv-cross-msl spirv-cross-hlsl)
+        if(TARGET ${target})
+            get_target_property(compileOptions ${target} COMPILE_OPTIONS)
+            list(REMOVE_ITEM compileOptions /wd4267 /wd4996)
+            set_target_properties(${target} PROPERTIES COMPILE_OPTIONS "${compileOptions}")
+        endif()
+    endforeach()
+endif()
 
 # -------------------------------- xr --------------------------------
 # Dependencies: none
