fixes to get it working with BRN

--- a/Dependencies/CMakeLists.txt
+++ b/Dependencies/CMakeLists.txt
@@ -53,6 +53,14 @@ if(NOT TARGET bgfx)
     if(APPLE)
         set_property(TARGET bgfx PROPERTY UNITY_BUILD false)
     endif()
+else()
+    FetchContent_Populate(bgfx)
+    set(BGFX_DIR "${bgfx_SOURCE_DIR}/bgfx" CACHE PATH "")
+    set(BX_DIR "${bgfx_SOURCE_DIR}/bx" CACHE PATH "")
+    set(BIMG_DIR "${bgfx_SOURCE_DIR}/bimg" CACHE PATH "")
+    target_include_directories(bgfx INTERFACE "${BGFX_DIR}/include")
+    target_include_directories(bx INTERFACE "${BX_DIR}/include" "${BX_DIR}/include/compat/msvc")
+    target_include_directories(bimg INTERFACE "${BIMG_DIR}/include" )
 endif()
 
 # -------------------------------- glslang --------------------------------
@@ -75,6 +83,8 @@ if(NOT TARGET glslang)
     set_property(TARGET OSDependent PROPERTY FOLDER Dependencies/glslang)
     set_property(TARGET MachineIndependent PROPERTY FOLDER Dependencies/glslang)
     set_property(TARGET SPIRV PROPERTY FOLDER Dependencies/glslang)
+else()
+    FetchContent_Populate(glslang)
 endif()
 
 # -------------------------------- SPIRV-Cross --------------------------------
@@ -111,20 +121,24 @@ if(NOT TARGET spirv-cross-core)
             set_target_properties(${target} PROPERTIES COMPILE_OPTIONS "${compileOptions}")
         endif()
     endforeach()
+else()
+    FetchContent_Populate(SPIRV-Cross)
 endif()
 
 # -------------------------------- xr --------------------------------
 # Dependencies: none
 # Currently supported on Windows via OpenXR, Android via ARCore, and iOS via ARKit.
-if(BABYLON_NATIVE_PLUGIN_NATIVEXR AND (WIN32 OR ANDROID OR IOS))
-    add_subdirectory(xr)
-    set_property(TARGET xr PROPERTY FOLDER Dependencies/xr)
-    warnings_as_errors(xr)
-    if(WIN32 OR WINDOWS_STORE)
-        set_property(TARGET openxr_loader PROPERTY FOLDER Dependencies/xr/OpenXR)
-        set_property(TARGET generate_openxr_header PROPERTY FOLDER Dependencies/xr/OpenXR/Generated)
-        set_property(TARGET xr_global_generated_files PROPERTY FOLDER Dependencies/xr/OpenXR/Generated)
-        set_property(TARGET uninstall PROPERTY FOLDER Dependencies/xr/OpenXR/Generated)
+if(NOT TARGET openxr_loader)
+    if(BABYLON_NATIVE_PLUGIN_NATIVEXR AND (WIN32 OR ANDROID OR IOS))
+        add_subdirectory(xr)
+        set_property(TARGET xr PROPERTY FOLDER Dependencies/xr)
+        warnings_as_errors(xr)
+        if(WIN32 OR WINDOWS_STORE)
+            set_property(TARGET openxr_loader PROPERTY FOLDER Dependencies/xr/OpenXR)
+            set_property(TARGET generate_openxr_header PROPERTY FOLDER Dependencies/xr/OpenXR/Generated)
+            set_property(TARGET xr_global_generated_files PROPERTY FOLDER Dependencies/xr/OpenXR/Generated)
+            set_property(TARGET uninstall PROPERTY FOLDER Dependencies/xr/OpenXR/Generated)
+        endif()
     endif()
 endif()
 
