build error with xr

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,10 +118,12 @@ else()
     message(FATAL_ERROR "Unrecognized platform: ${CMAKE_SYSTEM_NAME}")
 endif()
 
-if(WIN32 AND NOT ANDROID AND NOT IOS AND NOT TARGET openxr_loader)
-    # Avoid picking up system installed jsoncpp in favor of source distributed with openxr_loader project
-    set(BUILD_WITH_SYSTEM_JSONCPP OFF BOOL "disable using system installed jsoncpp")
-    set(CONTENT_TO_FETCH ${CONTENT_TO_FETCH} OpenXR-SDK OpenXR-MixedReality)
+if(NOT TARGET openxr_loader)
+    if(WIN32 AND NOT ANDROID AND NOT IOS)
+        # Avoid picking up system installed jsoncpp in favor of source distributed with openxr_loader project
+        set(BUILD_WITH_SYSTEM_JSONCPP OFF BOOL "disable using system installed jsoncpp")
+        set(CONTENT_TO_FETCH ${CONTENT_TO_FETCH} OpenXR-SDK OpenXR-MixedReality)
+    endif()
 endif()
 
 # Setting Graphics API
