--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,72 +1,79 @@
 cmake_minimum_required(VERSION 3.21)
-set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
-# Set fetched URL contents to the time of extraction, not the timestamps in the archive.
 if(POLICY CMP0135)
     cmake_policy(SET CMP0135 NEW)
 endif()
 
 include(FetchContent)
 
-# Modules declaration
-FetchContent_Declare(cmake-extensions
-    GIT_REPOSITORY https://github.com/BabylonJS/CMakeExtensions.git
-    GIT_TAG efe7101be5e04391b9e55f68a01d534f54d3026e)
-FetchContent_Declare(ios-cmake
-    GIT_REPOSITORY https://github.com/leetal/ios-cmake.git
-    GIT_TAG 4.4.1)
-FetchContent_Declare(arcana
+# --------------------------------------------------
+# Declarations
+# --------------------------------------------------
+FetchContent_Declare(AndroidExtensions
+    GIT_REPOSITORY https://github.com/bghgary/AndroidExtensions.git
+    GIT_TAG 97ebfb5046ed4e553e306a75e5fafc9c6b72cb39)
+FetchContent_Declare(arcana.cpp
     GIT_REPOSITORY https://github.com/microsoft/arcana.cpp.git
     GIT_TAG f2757396e80bc4169f2ddb938ce25367a98ffdd0)
-FetchContent_Declare(JsRuntimeHost
-    GIT_REPOSITORY https://github.com/BabylonJS/JsRuntimeHost.git
-    GIT_TAG d5f2813958b136a288e28f213a0d5a24a1164b9e)
-FetchContent_Declare(AndroidExtensions
-    GIT_REPOSITORY https://github.com/BabylonJS/AndroidExtensions.git
-    GIT_TAG 1a47db416ec2aae3f51b28b94f73e8f54e412d0d)
-FetchContent_Declare(googletest
-    URL "https://github.com/google/googletest/archive/refs/tags/v1.13.0.tar.gz")
-FetchContent_Declare(base-n
-    GIT_REPOSITORY https://github.com/azawadzki/base-n.git
-    GIT_TAG 7573e77c0b9b0e8a5fb63d96dbde212c921993b4)
-FetchContent_Declare(glslang
-    GIT_REPOSITORY https://github.com/BabylonJS/glslang.git
-    GIT_TAG 81f27a4399562459191e0506c0c1c353d99ba6e4)
-FetchContent_Declare(SPIRV-Cross
-    GIT_REPOSITORY https://github.com/KhronosGroup/SPIRV-Cross.git
-    GIT_TAG 54997fb4bc3adeb47b9b9f7bb67f1c25eaca2204)
 FetchContent_Declare(arcore-android-sdk
     GIT_REPOSITORY https://github.com/google-ar/arcore-android-sdk.git
     GIT_TAG 98cb803de5482fb2b36effe8be3b5a0d3b726976)
-FetchContent_Declare(OpenXR-SDK
-    GIT_REPOSITORY https://github.com/KhronosGroup/OpenXR-SDK.git
-    GIT_TAG 458984d7f59d1ae6dc1b597d94b02e4f7132eaba)
+FetchContent_Declare(base-n
+    GIT_REPOSITORY https://github.com/azawadzki/base-n.git
+    GIT_TAG 7573e77c0b9b0e8a5fb63d96dbde212c921993b4)
+FetchContent_Declare(bgfx.cmake
+    GIT_REPOSITORY https://github.com/BabylonJS/bgfx.cmake.git
+    GIT_TAG 3274a0b5755756d32cef18ed1859a342c1b90abd)
+FetchContent_Declare(CMakeExtensions
+    GIT_REPOSITORY https://github.com/bghgary/CMakeExtensions.git
+    GIT_TAG 4d3ed5a16f3660ba0f144fb08b5021cf024d5d2d)
+FetchContent_Declare(glslang
+    GIT_REPOSITORY https://github.com/BabylonJS/glslang.git
+    GIT_TAG 81f27a4399562459191e0506c0c1c353d99ba6e4)
+FetchContent_Declare(googletest
+    URL "https://github.com/google/googletest/archive/refs/tags/v1.13.0.tar.gz")
+FetchContent_Declare(ios-cmake
+    GIT_REPOSITORY https://github.com/leetal/ios-cmake.git
+    GIT_TAG 4.4.1)
+FetchContent_Declare(JsRuntimeHost
+    GIT_REPOSITORY https://github.com/bghgary/JsRuntimeHost.git
+    GIT_TAG 8ac284dba4df8fc271c6bf05813530007935d6c7)
 FetchContent_Declare(OpenXR-MixedReality
     GIT_REPOSITORY https://github.com/microsoft/OpenXR-MixedReality.git
     GIT_TAG 67424511525b96a36847f2a96d689d99e5879503)
-FetchContent_Declare(bgfx
-    GIT_REPOSITORY https://github.com/BabylonJS/bgfx.cmake.git
-    GIT_TAG 3274a0b5755756d32cef18ed1859a342c1b90abd)
+FetchContent_Declare(OpenXR-SDK
+    GIT_REPOSITORY https://github.com/KhronosGroup/OpenXR-SDK.git
+    GIT_TAG 458984d7f59d1ae6dc1b597d94b02e4f7132eaba)
+FetchContent_Declare(SPIRV-Cross
+    GIT_REPOSITORY https://github.com/KhronosGroup/SPIRV-Cross.git
+    GIT_TAG 54997fb4bc3adeb47b9b9f7bb67f1c25eaca2204)
+# --------------------------------------------------
 
-set(CONTENT_TO_FETCH cmake-extensions arcana JsRuntimeHost base-n)
+FetchContent_MakeAvailable(CMakeExtensions)
 
 if(IOS)
-    FetchContent_MakeAvailable(ios-cmake)
+    FetchContent_MakeAvailable_With_Message(ios-cmake)
     set(CMAKE_TOOLCHAIN_FILE "${ios-cmake_SOURCE_DIR}/ios.toolchain.cmake" CACHE PATH "")
     set(PLATFORM "OS64COMBINED" CACHE STRING "")
-    set(DEPLOYMENT_TARGET "12" CACHE STRING "")
-    set(ENABLE_ARC OFF CACHE STRING "Enables or disables ARC support.")
+    set(DEPLOYMENT_TARGET "13" CACHE STRING "")
 endif()
 
 project(BabylonNative)
 
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
+
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 # --------------------------------------------------
 # Options
 # --------------------------------------------------
+
+# General
 option(BABYLON_NATIVE_BUILD_APPS "Build Babylon Native apps." ${PROJECT_IS_TOP_LEVEL})
 option(BABYLON_NATIVE_INSTALL "Include the install target." ${PROJECT_IS_TOP_LEVEL})
 
-## Plugins
+# Plugins
 option(BABYLON_NATIVE_PLUGIN_EXTERNALTEXTURE "Include Babylon Native Plugin ExternalTexture." ON)
 option(BABYLON_NATIVE_PLUGIN_NATIVECAMERA "Include Babylon Native Plugin NativeCamera." ON)
 option(BABYLON_NATIVE_PLUGIN_NATIVECAPTURE "Include Babylon Native Plugin NativeCapture." ON)
@@ -77,33 +84,14 @@ option(BABYLON_NATIVE_PLUGIN_NATIVETRACING "Include Babylon Native Plugin Native
 option(BABYLON_NATIVE_PLUGIN_NATIVEXR "Include Babylon Native Plugin XR." ON)
 option(BABYLON_NATIVE_PLUGIN_TESTUTILS "Include Babylon Native Plugin TestUtils." ON)
 
-## Polyfills
+# Polyfills
 option(BABYLON_NATIVE_POLYFILL_WINDOW "Include Babylon Native Polyfill Window." ON)
 option(BABYLON_NATIVE_POLYFILL_CANVAS "Include Babylon Native Polyfill Canvas." ON)
 
 # --------------------------------------------------
 
-if(APPLE)
-    # Without this option on azure pipelines, there is a mismatch with math.h giving a lot of undefined functions on macOS.
-    # Only enabled for Apple as there is no issue for Windows.
-    set(CMAKE_NO_SYSTEM_FROM_IMPORTED TRUE)
-endif()
-
-if(BABYLON_NATIVE_BUILD_APPS AND ((WIN32 AND NOT WINDOWS_STORE) OR (APPLE AND NOT IOS) OR (UNIX AND NOT ANDROID)))
-    if(WIN32)
-        # For Windows: Prevent overriding the parent project's compiler/linker settings
-        # Default build type for my test projects are /MDd (MultiThreaded DLL) but GTests default to /MTd (MultiTreaded)
-        # see https://github.com/google/googletest/blob/main/googletest/README.md
-        # "Enabling this option will make gtest link the runtimes dynamically too, and match the project in which it is included."
-        set(gtest_force_shared_crt OFF CACHE BOOL "" FORCE)
-    endif()
-    set(CONTENT_TO_FETCH ${CONTENT_TO_FETCH} googletest)
-endif()
-
-# Setting Platform
 if(ANDROID)
     set(BABYLON_NATIVE_PLATFORM "Android")
-    set(CONTENT_TO_FETCH ${CONTENT_TO_FETCH} AndroidExtensions arcore-android-sdk)
 elseif(IOS)
     set(BABYLON_NATIVE_PLATFORM "iOS")
 elseif(APPLE)
@@ -118,13 +106,6 @@ else()
     message(FATAL_ERROR "Unrecognized platform: ${CMAKE_SYSTEM_NAME}")
 endif()
 
-if(WIN32 AND NOT ANDROID AND NOT IOS)
-    # Avoid picking up system installed jsoncpp in favor of source distributed with openxr_loader project
-    set(BUILD_WITH_SYSTEM_JSONCPP OFF BOOL "disable using system installed jsoncpp")
-    set(CONTENT_TO_FETCH ${CONTENT_TO_FETCH} OpenXR-SDK OpenXR-MixedReality)
-endif()
-
-# Setting Graphics API
 if(APPLE)
     set(GRAPHICS_API Metal)
 elseif(UNIX)
@@ -145,33 +126,11 @@ elseif(WIN32)
     endif()
 endif()
 
-# Fetching content
-message(STATUS "Fetching dependencies for ${PROJECT_NAME} (${CONTENT_TO_FETCH})")
-FetchContent_MakeAvailable(${CONTENT_TO_FETCH})
-message(STATUS "Fetching dependencies for ${PROJECT_NAME} - done")
-
-if(BABYLON_NATIVE_BUILD_APPS AND ((WIN32 AND NOT WINDOWS_STORE) OR (APPLE AND NOT IOS) OR (UNIX AND NOT ANDROID)))
-    set_property(TARGET gmock PROPERTY FOLDER Dependencies/GoogleTest)
-    set_property(TARGET gmock_main PROPERTY FOLDER Dependencies/GoogleTest)
-    set_property(TARGET gtest PROPERTY FOLDER Dependencies/GoogleTest)
-    set_property(TARGET gtest_main PROPERTY FOLDER Dependencies/GoogleTest)
-endif()
-
 if(APPLE)
     set(BABYLON_NATIVE_PLATFORM_IMPL_EXT "mm")
-    set_property(TARGET JsRuntime PROPERTY UNITY_BUILD false)
-    set_property(TARGET AppRuntime PROPERTY UNITY_BUILD false)
 else()
     set(BABYLON_NATIVE_PLATFORM_IMPL_EXT "cpp")
 endif()
-
-if(UNIX AND NOT APPLE AND NOT ANDROID)
-    # Use GLVND libraries for EGL support in bgfx
-    set(OpenGL_GL_PREFERENCE GLVND)
-endif()
-
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 if(MSVC)
     # __cplusplus value is not in sync with language version used. MVSC needs this flag to update it accordingly
@@ -182,21 +141,16 @@ if(MSVC)
     add_compile_options(/W3)
 endif()
 
-if(WIN32)
-    # UrlLib does not support unity build on win32
-    set_property(TARGET UrlLib PROPERTY UNITY_BUILD false)
+if(APPLE)
+    # Without this option on azure pipelines, there is a mismatch with math.h giving a lot of undefined functions on macOS.
+    # Only enabled for Apple as there is no issue for Windows.
+    set(CMAKE_NO_SYSTEM_FROM_IMPORTED TRUE)
 endif()
 
 add_subdirectory(Dependencies)
 add_subdirectory(Core)
 add_subdirectory(Plugins)
 add_subdirectory(Polyfills)
-
-if(DEFINED EXTENSIONS_DIRS)
-    foreach(extensionDir IN LISTS EXTENSIONS_DIRS)
-        add_subdirectory(${extensionDir} "Extensions")
-    endforeach()
-endif()
 
 if(BABYLON_NATIVE_BUILD_APPS)
     add_subdirectory(Apps)
