Updated SPIRV-Cross version to get size reduction features

--- a/Plugins/NativeEngine/CMakeLists.txt
+++ b/Plugins/NativeEngine/CMakeLists.txt
@@ -51,7 +51,7 @@ if(TARGET spirv-cross-hlsl)
 elseif(TARGET spirv-cross-msl)
     target_link_libraries(NativeEngine
         PRIVATE spirv-cross-msl)
-else()
+elseif(TARGET spirv-cross-glsl)
     target_link_libraries(NativeEngine
         PRIVATE spirv-cross-glsl)
 endif()
