--- a/Apps/CMakeLists.txt
+++ b/Apps/CMakeLists.txt
@@ -6,4 +6,4 @@ if((WIN32 AND NOT WINDOWS_STORE) OR (APPLE AND NOT IOS) OR (UNIX AND NOT ANDROID
     add_subdirectory(UnitTests)
 endif()
 
-npm(install --silent)
+#npm(install --silent)
