--- a/Dependencies/CMakeLists.txt
+++ b/Dependencies/CMakeLists.txt
@@ -82,6 +82,10 @@ set(SPIRV_CROSS_ENABLE_REFLECT OFF CACHE BOOL "")
 set(SPIRV_CROSS_ENABLE_C_API OFF CACHE BOOL "")
 set(SPIRV_CROSS_ENABLE_UTIL OFF CACHE BOOL "")
 set(SPIRV_CROSS_SKIP_INSTALL ON CACHE BOOL "")
+set(SPIRV_CROSS_ENABLE_WEBMIN ON CACHE BOOL "")
+if(NOT GRAPHICS_API STREQUAL "OpenGL")
+    set(SPIRV_CROSS_ENABLE_GLSL OFF CACHE BOOL "")
+endif()
 if(NOT GRAPHICS_API STREQUAL "Metal")
     set(SPIRV_CROSS_ENABLE_MSL OFF CACHE BOOL "")
 endif()
@@ -90,7 +94,9 @@ if(NOT GRAPHICS_API STREQUAL "D3D11" AND NOT GRAPHICS_API STREQUAL "D3D12")
 endif()
 FetchContent_MakeAvailable(SPIRV-Cross)
 set_property(TARGET spirv-cross-core PROPERTY FOLDER Dependencies/SPIRV-Cross)
-set_property(TARGET spirv-cross-glsl PROPERTY FOLDER Dependencies/SPIRV-Cross)
+if(TARGET spirv-cross-glsl)
+    set_property(TARGET spirv-cross-glsl PROPERTY FOLDER Dependencies/SPIRV-Cross)
+endif()
 if(TARGET spirv-cross-msl)
     set_property(TARGET spirv-cross-msl PROPERTY FOLDER Dependencies/SPIRV-Cross)
 endif()
